# rvv

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.32  README.md
app/: CMakeLists.txt  main.c  test.c  test_conv2d.c  test_cpp_wrapper.cpp  test_fir.c  test_iir.c  test_mat_data.h  test_mlp_xor.c  test_nn_dense.c
cmake/: build32.cmake  clang_format.cmake  clang_tidy.cmake  coverage.cmake  cppcheck.cmake  cust_definition.cmake  doxygen.cmake  embedded_c++.cmake  gtest.cmake  leaks.cmake  options.cmake  strict.cmake  toolchain-ca.cmake  toolchain-riscv.cmake  toolchain-riscv32.cmake  toolchain-riscv64.cmake  valgrind.cmake
hal/: CMakeLists.txt  hal_basic_math.h  hal_internal_math.h  hal_math.h  hal_math_array.h  hal_rvv.h  hal_rvv_math.S  hal_rvv_test.c  hal_soft_math.c  hal_soft_math.h  hal_test.c  hal_types.h
hal/host/: hal_host_math.c
hal/riscv32/: hal_riscv32_math.S  hal_riscv32_math0.S  hal_riscv32_math1.S
hal/riscv64/: hal_riscv64_math.S
hal/test/: hal_test.c  hal_test_mat_data.h
inc/: config.h.in
lib/: CMakeLists.txt  VMath.hpp  bmath.h  dsp_fft.c  dsp_fft.h  dsp_filter.h  dsp_fir.c  dsp_iir.c  hal_math_array.S  hal_math_array.h  image_filter.c  image_filter.h  mnist_data.h  nn_dense_layer.h  nn_layers.c  nn_layers.h  rvv_math.c  rvv_math.h  vmath.c  vmath.h  vmath_driver.h  vmath_driver_host.c  vmath_driver_riscv32.c  vmath_driver_zephyr.c  vmath_types.h
test/: CMakeLists.txt  test_main.cpp  test_module_a.cpp
util/: CMakeLists.txt  dbg.c  dbg.h
zephyr_app/: CMakeLists.txt  note.md  prj.conf
zephyr_app/app/: test_custom_instruction.c
zephyr_app/lib/: vmath_driver.h
zephyr_app/src/: main.c  main.c.orc
